fix: Change some colors for text and backgrounds in FieldWrapper and Input for more contrast

--- a/src/components/ui/FieldWrapper/FieldWrapper.module.scss
+++ b/src/components/ui/FieldWrapper/FieldWrapper.module.scss
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     top: -9px;
-    left: 24px;
+    left: 22px;
     padding: 0 4px;
     z-index: $fieldWrapperZIndexDefault;
     transition: all $fieldWrapperAnimation;
@@ -43,14 +43,14 @@
       transition: all $fieldWrapperAnimation;
     }
     &--disabled {
-      color: $fieldWrapperLabelColor;
+      color: $fieldWrapperLabelColorDissabled;
       &:after {
         background-color: $fiedlWrapperLabelBackgroundColorReadonly;
       }
     }
   }
 
-  &__border {
+  &__main {
     width: 100%;
     height: 100%;
     display: flex;
